--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "license": "ISC",
   "packageManager": "pnpm@10.28.2",
   "dependencies": {
-    "fastify": "^5.7.4"
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
+    "fastify": "^5.7.4",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^25.2.0",
+    "@types/pg": "^8.16.0",
+    "drizzle-kit": "^0.31.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
