--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
+    "fastify-plugin": "^5.1.0",
     "pg": "^8.18.0"
   },
   "devDependencies": {
